--- a/src/app/stateful/stateful.component.html
+++ b/src/app/stateful/stateful.component.html
@@ -4,9 +4,18 @@
    <h1>Stateful</h1>
    <p class="lead">Ejemplo de componete stateful.</p>
 
-   <ul class="list-group">
-   <li class="list-group-item" *ngFor="let curso of shopModel.shopItems">{{curso.title}}</li>
-
-   </ul>
+     <div class="card-deck">
+       <div class="card" *ngFor="let Item of shopModel.shopItems">
+         <img class="card-img-top" src="{{Item.picture}}"
+              alt="{{Item.title}}">
+         <div class="card-body">
+           <h5 class="card-title">{{Item.title}}</h5>
+           <p class="card-text">{{Item.desc}}</p>
+           <p class="card-text">Precio: {{Item.price}}€</p>
+           <a href="#" class="btn btn-primary">Comprar</a>
+         </div>
+       </div>
+   </div>
    </div>
    </main><!-- /.container -->
+
