--- a/src/app/stateful/stateful.component.html
+++ b/src/app/stateful/stateful.component.html
@@ -1,21 +1,25 @@
 <main role="main" class="container">
+  <ul class="list-group">
+    <li *ngFor="let boughtItem of boughtItems"
+        class="list-groupitem">{{boughtItem.title}}</li>
+  </ul>
 
    <div class="starter-template">
    <h1>Stateful</h1>
    <p class="lead">Ejemplo de componete stateful.</p>
-
-     <div class="card-deck">
-       <div class="card" *ngFor="let Item of shopModel.shopItems">
-         <img class="card-img-top" src="{{Item.picture}}"
-              alt="{{Item.title}}">
-         <div class="card-body">
-           <h5 class="card-title">{{Item.title}}</h5>
-           <p class="card-text">{{Item.desc}}</p>
-           <p class="card-text">Precio: {{Item.price}}€</p>
-           <a href="#" class="btn btn-primary">Comprar</a>
-         </div>
-       </div>
    </div>
-   </div>
+  <div class="container-fluid bg-trasparent my-4 p-3" style="position: relative;">
+    <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
+      <div class="col" *ngFor="let Item of shopModel.shopItems">
+        <div class="card h-100 shadow-sm"> <img src="{{Item.picture}}" class="card-img-top" alt="{{Item.title}}">
+          <div class="card-body">
+            <div class="clearfix mb-3"> <span class="float-start badge rounded-pill bg-primary">{{Item.title}}</span> <span class="float-end price-hp">Precio: {{Item.price}}€</span> </div>
+            <h5 class="card-title">{{Item.desc}}</h5>
+            <div class="text-center my-4"> <a href="#" class="btn btn-warning" (click)="clickItem(Item)">Check offer</a> </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
    </main><!-- /.container -->
 
