--- a/src/app/stateful/stateful.component.html
+++ b/src/app/stateful/stateful.component.html
@@ -1,10 +1,17 @@
 <main role="main" class="container">
-
-   <div class="starter-template">
-   <h1>Stateful</h1>
-   <p class="lead">Ejemplo de componete stateful.</p>
-   </div>
-
-  <app-stateless *ngFor="let Item of shopModel.shopItems" [product]="Item" ></app-stateless>
-   </main>
-
+  <div class="starter-template">
+    <h1>Stateful</h1>
+    <p class="lead">Ejemplo de componete stateful.</p>
+  </div>
+  <div
+    class="container-fluid bg-trasparent my-4 p-3"
+    style="position: relative"
+  >
+    <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
+      <app-stateless
+        *ngFor="let Item of shopModel.shopItems"
+        [product]="Item"
+      ></app-stateless>
+    </div>
+  </div>
+</main>
