--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: var(--font3);
-  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%)
+  background-image: linear-gradient(120deg, #333259 0%, #ebedee 100%)
 }
 
 h2 {
